<resources>
    <string name="app_name">Mirror</string>


    <string name="pictures_of_wearing">佩戴图集</string>
    <string name="buy">购买</string>
    <string name="production_detail">商品细节展示</string>

    <string name="lzp_countlogin">账号登录</string>
    <string name="phonenum">手机号</string>
    <string name="lzp_password">密码</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="login">登录</string>
    <string name="makecount">创建账号</string>
    <string name="useotherlogin">使用社交账号</string>
    <string name="number">验证码</string>
    <string name="sendnumber">发送验证码</string>
    <string name="setpassword">设置密码</string>
    <string name="addadress">添加地址</string>
    <string name="addname">添加收件人姓名</string>
    <string name="addnumber">添加联络电话号码</string>
    <string name="addgetadress">添加收货地址</string>
    <string name="pushadress">提交地址</string>
    <string name="forgrtpassword">忘记密码</string>
    <string name="checknum">验证码</string>
    <string name="sendchecknum">发送验证码</string>
    <string name="changepassword">修改密码</string>
    <string name="orderdetail">订单详情</string>
    <string name="addpersoninfo">请填写收件人信息</string>
    <string name="writeadress">填写地址</string>
    <string name="checkorder">确认下单</string>
    <string name="paymoney">运费:</string>
    <string name="lzp_free">免运费</string>
    <string name="total">小计:</string>


    <string name="main_login">登录</string>
    <string name="classified__special">专题分享</string>
    <string name="classified_shopingcar">我的购物车</string>
    <string name="classified_back">返回首页</string>
    <string name="classified_exit">退出</string>
    <string name="reuse_untitle">显示排序为 最新推荐</string>
    <string name="item_reuse_project_tv">mirror传达</string>
    <string name="name_detail">FINLAYCO</string>
    <string name="brand_detail">水蓝色晶透板材太阳镜</string>
    <string name="smooth_browse_details">滑动浏览详情</string>
    <string name="loading_default">加载失败</string>
    <string name="detail_brand">飞行员太阳镜</string>


    <string name="reuse_title_head">浏览</string>
    <string name="order_detail_second_text">3850</string>
    <string name="nonet_toast">请检查网络连接</string>
    <string name="myalladdress">我的所有地址</string>

    <string name="shopingCar">购物车</string>
    <string name="comment">分享</string>

    <string name="getperson">收件人:</string>
    <string name="getaddress">收件地址:</string>
    <string name="please_write_all_info">请输入完整信息</string>
    <string name="all_address_delete">删除</string>
    <string name="all_address_del_address">删除地址</string>
    <string name="login_success">登录成功</string>
    <string name="order_detail_name">"姓名:   "</string>
    <string name="order_detail_address">"地址:   "</string>
    <string name="order_detail_number">"电话:   "</string>
    <string name="please_enet_phone_number">请输入手机号</string>
    <string name="please_enter_correct_verify_code">请输入正确的验证码</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="resend_after">秒后重新发送</string>
    <string name="send_verification_code">发送验证码</string>

    <string name="item_popupwindow_pay_select_pay_type">选择支付方式</string>
    <string name="item_popupwindow_pay_wechat_pay">微信支付</string>
    <string name="item_pay_external_goods_name">商品名称:</string>
    <string name="item_pay_external_test_goods">测试的商品</string>
    <string name="item_pay_external_goods_describe">商品描述:</string>
    <string name="item_pay_external_test_goods_describe">该测试商品的详细描述</string>
    <string name="item_pay_external_goods_price">商品价格:</string>
    <string name="item_pay_external_price">0.01元</string>
    <string name="item_pay_external_pay">支付</string>
    <string name="item_pay_external_pay_online">网页支付转native</string>
    <string name="item_popupwindow_pay_ali_pay">支付宝支付</string>

    <string name="buy_details_activity_pay_success">支付成功</string>
    <string name="buy_details_activity_pay_waiting">支付结果确认中</string>
    <string name="buy_details_activity_pay_fail">支付失败</string>


</resources>
