<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lzp_fifteen"
        android:layout_marginRight="@dimen/lzp_fifteen"
        android:layout_marginTop="@dimen/lzp_fifteen"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/lzp_zero"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderdetail"
                android:textSize="@dimen/lzp_text_twenty"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/lzp_zero"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/register_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/close" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lzp_ten"
        android:src="@mipmap/makecount_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lzp_fifteen"
        android:layout_marginRight="@dimen/lzp_fifteen"
        android:layout_marginTop="@dimen/lzp_twenty"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/order_detail_margin"
            android:hint="@string/addpersoninfo"
            android:textSize="@dimen/lzp_text_fifteen" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lzp_half"
            android:layout_marginTop="@dimen/lzp_fifty"
            android:background="@color/colorBlack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lzp_fourty">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/writeadress"
                android:textSize="@dimen/lzp_text_thirteen" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lzp_fifteen"
        android:layout_marginRight="@dimen/lzp_fifteen"
        android:layout_marginTop="@dimen/lzp_ten"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/lzp_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="@dimen/lzp_zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lzp_ten"
                    android:text="woodlike"
                    android:textSize="@dimen/lzp_text_fifteen"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lzp_ten"
                    android:text="dfsgsfghgfhghhfghfdgsdgsgsfgsrtreggdgsdsgsgd"
                    android:textSize="@dimen/lzp_text_thirteen" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="@dimen/lzp_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </LinearLayout>

            <TextView
                android:layout_width="@dimen/lzp_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/lzp_fifteen"
                android:layout_marginTop="@dimen/lzp_fifteen"
                android:layout_weight="2"
                android:text="3850"
                android:textColor="@color/colorPink"
                android:textSize="@dimen/lzp_text_thirteen" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lzp_fifteen"
        android:layout_marginRight="@dimen/lzp_fifteen"
        android:layout_marginTop="@dimen/lzp_ten"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lzp_fourty_five">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lzp_twenty"
                android:text="@string/paymoney" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/lzp_twenty"
                android:text="@string/lzp_free" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lzp_half"
            android:layout_marginLeft="@dimen/lzp_twenty"
            android:layout_marginRight="@dimen/lzp_twenty"
            android:background="@color/colorBlack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lzp_fourty_five">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lzp_twenty"
                android:text="@string/total" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/lzp_fifteen"
                android:text="@string/order_detail_second_text" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lzp_fifteen"
        android:layout_marginRight="@dimen/lzp_fifteen"
        android:layout_marginTop="@dimen/lzp_twenty_five"
        android:background="@mipmap/makeacount"
        android:text="@string/checkorder"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/lzp_text_fifteen" />

</LinearLayout>
